--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -1,3 +1,5 @@
+//main.pug
+
 doctype html
 html(lang="en")
   head
@@ -29,8 +31,6 @@ html(lang="en")
     main
       section.section-title
         h2 차트 표시 구역
-        a(href="/users/market-indices")
-          h4 더보기
       include market-indices.pug
 
       section.section-title
