--- a/src/views/stock_data.pug
+++ b/src/views/stock_data.pug
@@ -1,3 +1,5 @@
+//stock_data.pug
+
 doctype html
 html(lang='ko')
   head
@@ -59,6 +61,8 @@ html(lang='ko')
           | 마지막 업데이트: --
     
     script(src='/js/stock.data.js') 
+    script(src="/js/stock-detail.js")
+
 
     footer.zenstock-footer zenstock
       .footer-links
