--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -1,3 +1,5 @@
+/*chart*/
+
 .chart-container {
     max-width: 800px;
     background-color: white;
@@ -175,3 +177,4 @@ canvas {
     color: #737373;
     font-size: 12px;
 }
+
